PB-55: userName-overflow fix

--- a/PlaceBook/src/app/sidebar/user-card/user-card.component.scss
+++ b/PlaceBook/src/app/sidebar/user-card/user-card.component.scss
@@ -35,6 +35,7 @@
   font-size: var(--primary-font-size);
   width: 100%;
   overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .user-card-container button {
